Codigo Ejemplo/1. Principios Universales de Diseño Software/1.2 Programa a una interfaz/CompaniaDeSoftware/src/main/java/org/example/bad/Programador.java
package org.example.bad;

public class Programador {

    public String crearPrograma(){
        return "Programa creado (200 lineas escritas )";
    }

}
